--- a/education.tex
+++ b/education.tex
@@ -276,7 +276,7 @@ Python, while \astrocl~ will cover Python libraries for working with big data.
 
 \vskip 0.2in
 \bit
-\item  \underline{\statcl~ {\bf Draft Syllabus}}  XXX NEEDS TITLE \\
+\item  \underline{\statcl~ ``Computational Statistical Modeling and Machine Learning''{\bf Draft Syllabus}} \\
 \bit
 \item a review of the concept of likelihood and Max Likelihood estimation (cases in which MLE has no closed form, gradient ascent/Newton estimation of MLE)
 \item a review of basic probability models with focus on ML estimation of these models, supported heavily by simulation (e.g demonstrating gaussianity of MLE for certain models, and non-gaussianity for other models, including Zipf's law type distributions)
