broad and intel

--- a/Summary.tex
+++ b/Summary.tex
@@ -102,17 +102,19 @@
 Most disciplines, from the physical to the life sciences, have entered
 an era, where discovery is no longer limited by the collection and
 processing of data, but by the management and the statistical analysis
-of this information. Novel developments in instrumentation have lead
-to a tremendous increase in the magnitude of these data (leading to a
+of this information. Novel developments in instrumentation have led to
+a tremendous increase in the magnitude of these data (resulting in a
 focus on \emph{Big Data}).  While significant steps in the development
 of the statistical methodologies for processing Big Data have been
 made, these ``hammers'' are rarely tied to fundamental questions that
 science and society wish to address. There remains a disconnect
 between methodological approaches to Big Data and the science that
-they can enable.
+enable.
 %The goal of this proposal is to address this disconnect
 %through the development of a educational program for big data in
 %statistics and mathematics.
+
+\noindent{\bf Intellectual Merit}
 
 \noindent{\bf Education and Training:}
 The goal of this EXTREEMS-QED program is to create a new breed of
@@ -122,7 +124,6 @@ tools and models to some of the biggest scientific questions of the
 coming decades.  Most importantly, this program will have an immutable
 focus on multidisciplinary training, thus blurring the distinctions
 between students of mathematics, statistics, and the domain sciences.
-
 Our transformative path to address the challenges associated with
 these goals comprises: the development of a Big Data track as part of
 the ACMS (Applied and Computational Math Sciences) Program at the
@@ -130,10 +131,10 @@ University of Washington, tying the statistical methodologies to
 real-world science challenges (initially Astrophysics and then a
 broader range of domain sciences), and leveraging partnerships with
 the eScience Institute, the UW IGERT graduate program in Big Data, and
-the dual track PhD program in Computer Science and Statistics. 
+the dual track PhD program in Computer Science and Statistics.
 
-The Big Data track will comprise two elective courses, and an
-Undergraduate \cdse~ Research Seminar. The speakers in this seminar
+The Big Data track will consist of two elective courses, and an
+Undergraduate  Research Seminar. The speakers in this seminar
 series will be undergraduates themselves or their mentors, and the
 seminar topics will be their research projects. With continuous
 evaluation of the impact of these courses we expect to redesign the
@@ -169,6 +170,8 @@ enable students to focus on the statistical application as opposed to
 the software development, initial research projects will be based on
 existing scalable Python applications, developed by the coPIs, that
 are suitable for large data sets.
+
+\noindent{\bf Broader Outreach}
 
 \noindent{\bf Faculty Professional
 Development/Outreach:}
