--- a/Summary.tex
+++ b/Summary.tex
@@ -1,4 +1,5 @@
 \documentclass[nofootbib,floatfix,11pt]{article}
+\pagestyle{empty}
 \usepackage[square]{natbib}
 \usepackage[paperwidth=8.5in,paperheight=11in,centering,margin=1in]{geometry}
 \usepackage{paralist}
@@ -96,15 +97,17 @@
 \begin{document}
 
 %\vskip -1.6in
-%\centerline{\Large     PROJECT SUMMARY}
+\centerline{\large \sc     PROJECT SUMMARY}
 %\medskip
+\centerline{\large \bf EXTREEMS-QED: Computer Enabled Statistics and Data Exploration}
+\centerline{\large \bf in the ACMS Program}
 
 Most disciplines, from the physical to the life sciences, have entered
 an era, where discovery is no longer limited by the collection and
 processing of data, but by the management and the statistical analysis
-of this information. Novel developments in instrumentation have led to
+of this information.\comment{Developments in instrumentation have led to
 a tremendous increase in the magnitude of these data (resulting in a
-focus on \emph{Big Data}).  While significant steps in the development
+focus on \emph{Big Data}).}  While significant steps in the development
 of the statistical methodologies for processing Big Data have been
 made, these ``hammers'' are rarely tied to fundamental questions that
 science and society wish to address. There remains a disconnect
@@ -114,33 +117,32 @@ enable.
 %through the development of a educational program for big data in
 %statistics and mathematics.
 
-\noindent{\bf Intellectual Merit}
-
-\noindent{\bf Education and Training:}
+\noindent\underline{{\bf Intellectual Merit} }
+{\bf  Education and Training:}
 The goal of this EXTREEMS-QED program is to create a new breed of
 statistician: proficient in and able to understand the tools and
 methodologies for data-intensive statistics yet able to apply these
 tools and models to some of the biggest scientific questions of the
-coming decades.  Most importantly, this program will have an immutable
-focus on multidisciplinary training, thus blurring the distinctions
-between students of mathematics, statistics, and the domain sciences.
-Our transformative path to address the challenges associated with
-these goals comprises: the development of a Big Data track as part of
-the ACMS (Applied and Computational Math Sciences) Program at the
+coming decades.  Importantly, this program will focus on
+multidisciplinary training, thus blurring the distinctions between
+students of mathematics, statistics, and the domain sciences.  Our
+transformative path to address the challenges associated with these
+goals comprises: the development of a Big Data focused track as part of the
+ACMS (Applied and Computational Math Sciences) Program at the
 University of Washington, tying the statistical methodologies to
 real-world science challenges (initially Astrophysics and then a
 broader range of domain sciences), and leveraging partnerships with
 the eScience Institute, the UW IGERT graduate program in Big Data, and
 the dual track PhD program in Computer Science and Statistics.
 
-The Big Data track will consist of two elective courses, and an
-Undergraduate  Research Seminar. The speakers in this seminar
-series will be undergraduates themselves or their mentors, and the
-seminar topics will be their research projects. With continuous
-evaluation of the impact of these courses we expect to redesign the
-track to incorporate two groups: math/stat electives (group I) and
-computing and science electives (group II) with focuses on the theory
-or methodology and application respectively.
+The track will include of two new Big Data courses, and an
+Undergraduate Research Seminar. The speakers in this seminar series
+will be undergraduates themselves or their mentors, and the seminar
+topics will be their research projects. With continuous evaluation of
+the impact of these courses we expect to redesign the track to
+incorporate two groups: math/stat electives (group I) and computing
+and science electives (group II) with focuses on the theory or
+methodology and application respectively.
 
 %This educational program fits naturally with a number of initiatives
 %to integrate the mathematical and physical sciences around the
@@ -154,7 +156,7 @@ or methodology and application respectively.
 %experiences, and by engaging the IGERT graduate students in working
 %with the undergraduate students.
 
-\noindent{\bf Research:}
+\noindent{\bf Research:} 
 Our primary research goal is to introduce and prepare students to
 perform research in computationally intense statistical modeling and
 in the statistical analysis of large scientific data. Based on the
@@ -171,11 +173,8 @@ the software development, initial research projects will be based on
 existing scalable Python applications, developed by the coPIs, that
 are suitable for large data sets.
 
-\noindent{\bf Broader Outreach}
-
-\noindent{\bf Faculty Professional
-Development/Outreach:}
-The development of the ACMS Big Data track will in of itself have a
+\noindent\underline{{\bf Broader Impact}} {\bf  Faculty Professional Development/Outreach:}
+The development of this ACMS track will in of itself have a
 broad impact on the University and on the teaching and impact of
 statistics for data-intensive sciences. It will enable opportunities
 for undergraduate research and hands-on experiences centered on \cdse\
