--- a/recruitment.tex
+++ b/recruitment.tex
@@ -83,9 +83,9 @@ examined so that the faculty and peer mentor roles are active and
 fulfilling.
 
 We anticipate that throughout the ACMS course the students will be
-exposed to a large interdisciplinary pool of faculty participants with
-diverse ethnicity and gender backgrounds (e.g., the faculty
-participants from the departments in this proposal are XX\% women).
+exposed to a large interdisciplinary pool of faculty and other participants with
+diverse ethnicity and gender backgrounds (e.g., the Statistics faculty
+are 29\% women and the Astronomy Faculty are 26\% women).
 Such broad exposure will enable students to think outside their
 science domain's traditional set of solutions to intellectual
 roadblocks.  Avoiding such obstacles is important to keeping students
