--- a/proposal.bib
+++ b/proposal.bib
@@ -111,7 +111,7 @@ url = {http://www.test.org/doe/}
 @Article{Perrault-JoncasM:riemann-jmlr11,
   author = 	 {Dominique Perrault-Joncas and Marina Meil\u{a}},
   title = 	 {Riemannian learning of manifolds},
-  journal = 	 {Journal of Machine Learning Research,
+  journal = 	 {Journal of Machine Learning Research},
   year = 	 {(submitted)},
   volume = 	 {},
   pages = 	 {},
