touched the headings

--- a/activities.tex
+++ b/activities.tex
@@ -4,31 +4,25 @@
 \subsection{PI and Co-PIs Involvement}
 
 \bits
-\item First year: program coordination and curriculum planning (within the department and between the other departments participating in ACMS). Preparation for stage 2 of the project. 
-Development of a plan for the core Python numerical and data structures libraries to be taught.
+\item First year. PI: program coordination and curriculum planning (within the department and between the other departments participating in ACMS). Design in collaboration with the ACMS leadership and the departments involved of the set of courses to form the new curriculum. Ensure consistency of the prerequisites between courses in the track, as well as feasible paths to timely graduation exist. Plan and start on \statcl~ course notes. Co-PI's: Development of a plan for the core Python numerical and data structures libraries to be taught.
 Beginning of the development of course notes for \statcl.
-
-\item Second year: Evaluation of the success of the first phase and
-  incorporation of the lessons learned. Development of the bulk of the STAT 391 course
-  notes. Supervision of  the undergraduate research seminar. 
- Selecting/curating  (with RAs) of the data sets to be used in
-  \statcl. Organization and execution of the workshop. 
-%\mmp{will lighten this because the salary was shrunk}
-
-\item Third year: Evaluation of the second phase and fine-tuning of
-  the curriculum and program requirements. Exploration of the possibilities to
-  open this pathway to math majors. Organization and execution of the workshop. 
- \eits
+\item Second year, PI, Co-PIs: Evaluation of the first phase and
+  incorporation of the lessons learned. Development of the bulk of the
+  STAT 391 course notes. Supervision of the undergraduate research
+  seminar.  Selecting/curating (with RAs) of the data sets to be used
+  in \statcl. Organization of first workshop.
+\item Third year: Evaluation of second phase, fine-tuning of the
+  curriculum and program requirements. Exploration of the
+  possibilities to open this pathway to math majors. Organization of
+  second workshop.  \eits
 
 \subsection{Undergraduate involvement}
 \label{sec:ugradseminar}
-
 %The PI and all co-PI's have extensive track records of involving
 %undergrads in research. Undergraduates who take either of the courses will be involved in
 %research projects either (1) along with the funded graduate students,
 %supervised by the PI, co-PI's and the graduate students or (2) in the
 %UW units that provide data sets.
-
 All undergraduates involved in research under this project, along with
 their supervising graduate students, will participate in an {\em
   Undergraduate \cdse\ Research Seminar} where they will present and
@@ -39,7 +33,6 @@ across campus interested in \cdse~ research. The seminar's goal is to
 be a forum where research experiences are shared, research teams are
 formed, new research projects are started, and familiarity with the
 strategic and social aspects of research is gained.
-
 In addition to technical presentations by undergraduate
 students, the seminar will include:
 \bits
@@ -50,7 +43,6 @@ students, the seminar will include:
 \eits
 Some of the seminar's activities and goals overlap with the goals of {\em Statistics and Probability Association}\footnote{{\tt http://students.washington.edu/spassc/index.html}}, and the Pre-MAP program\footnote{\tt http://www.astro.washington.edu/users/premap/}, 
 and we plan to do these jointly, reinforcing the  benefits for all groups involved.
-
 
 \subsection{Graduate students involvement}
 \label{sec:activities-grad}
