--- a/dissemination.tex
+++ b/dissemination.tex
@@ -1,7 +1,7 @@
-\section{Dissemination and Outreach}
+\section{DISSEMINATION AND OUTREACH}
 \label{sec:outreach}
 
-
+\vspace{-0.8em}
 It is our strong desire to make our educational and research
 program portable and adaptable by other institutions. For example, 
 the lack of such a program that can be easily emulated was identified 
@@ -17,6 +17,7 @@ analysis code.
 \subsection{Workshops} 
 \label{sec:workshop}
 
+\vspace{-0.8em}
 In order to facilitate easy adoption of our program by others, we will
 hold two workshops. The first workshop, which will also serve as a dry
 run for the second larger workshop, will be limited to faculty from
