--- a/organization.tex
+++ b/organization.tex
@@ -1,6 +1,6 @@
-\section{PROJECT ORGANIZATION AND MANAGEMENT}
+\section{PROJECT  MANAGEMENT  AND ORGANIZATION }
 \label{plan}
-
+\vspace{-0.8em}
 \subsection{                      Key Project Aims                   }
 \label{sec:key-aims}
  
@@ -20,11 +20,9 @@ increased enrollment in newly developed major, inclusion of developed activities
 
 
 \subsection{Responsibilities and Schedule}
-
 \noindent Our main goals and deliverables are: 
 \bits
 \item {\bf Education and Training} (Section \ref{sec:education}).
-
   To transform the ACMS Program Statistics track to address the
   challenges of data intensive statistics including:
 \begin{itemize}
@@ -69,7 +67,7 @@ emulate the UW program.
 
 \subsection{             Results from Prior NSF Support             }
 \label{sec:priorNSF}
-
+\vspace{-0.8em}
 \meila, Connolly, Ivezi\'{c}, and Vanderplas are all part of an active
 and ongoing collaboration between statisticians, astrophysicists, and
 computer scientists at the University of Washington and Carnegie
