--- a/recruitment.tex
+++ b/recruitment.tex
@@ -1,5 +1,5 @@
  \section{RECRUITMENT, MENTORING, AND RETENTION}
-
+\vspace{-0.8em}
  The University of Washington has long played a leadership role in
  recruiting, and mentoring students including those from traditionally
  under-represented groups (i.e.\ women, people with disabilities
@@ -17,7 +17,7 @@
 
 
 \subsection{Recruiting Under-represented Groups}
- 
+ \vspace{-0.8em}
 One focus of this program is to increase the participation of
 \textbf{traditionally under-represented groups} in the statistical and
 math communities. To accomplish this we will engage undergraduate
@@ -54,7 +54,7 @@ students).
 
 \subsection{Mentoring, Networking, and Retaining Students}
 \label{sec:MNRetaining}
-
+\vspace{-0.8em}
 Mentoring and community building will begin immediately upon
 acceptance to the program. We will build upon the success of the
 ``Pre-Major in Astronomy Program'' \cite{garner2010diversity} that was
